# home-automation1

./: .env  .gitignore  BUILD.md  PROJECT_BACKLOG.md  README.md  RELEASE_v0.1.md  TASKS.md  config.example.yaml  fix_mock_generator.py  project.md  pyproject.toml  pytest.ini  quickstart.bat  quickstart.ps1  requirements-dev.txt  requirements.txt  run_web.py  run_web_port.py  setup.py  test_build.py  test_camera_services.py  test_camera_services_simple.py  test_debug_scan.py  test_scan.py  test_scan_simple.py  verify_scan_fix.py
docs/: CLI_DEVELOPMENT_GUIDE.md  CLI_QUICK_REFERENCE.md  hik-connect-integration.md
docs/plans/: 2026-02-15-home-automation-design.md  2026-02-15-home-automation-implementation.md
examples/: camera_services_examples.py  rtsp_probe.py  test_camera_services.py
homeauto/analytics/: camera_analytics.py
homeauto/cli/: camera.py  config.py  main.py  scan.py  scan_click.py  security.py
homeauto/config/: manager.py
homeauto/database/: models.py  repository.py
homeauto/devices/: base.py  camera.py  gate.py  security.py  tuya.py
homeauto/discovery/: identifier.py  mock.py  scanner.py
homeauto/services/: __init__.py
homeauto/services/camera/: __init__.py  base_service.py  global_manager.py  manager.py  motion_service.py  object_recognition.py  scheduled_service.py  snapshot_service.py
homeauto/services/camera/storage/: __init__.py  base.py  ftp_storage.py  google_drive_storage.py  local_storage.py  sftp_storage.py
homeauto/utils/: logging_config.py  network.py  notifications.py  retry.py
homeauto/web/: api.py  camera_services_api.py
homeauto/web/static/: camera_options_modal.html  camera_services.html  camera_services_updated.html  index.html  index_clean.html
tests/cli/: test_config.py  test_scan.py
tests/config/: test_manager.py  test_manager_aliases.py
tests/database/: test_models.py  test_repository.py
tests/devices/: test_base.py  test_camera.py  test_gate.py  test_tuya.py
tests/discovery/: test_identifier.py  test_mock.py  test_scanner.py
tests/services/: test_camera_service_manager_contract.py
tests/utils/: test_network.py  test_retry.py
tests/web/: test_api.py  test_websocket.py
