[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "homeauto"
version = "0.1.0"
description = "Home Automation System with Camera Services"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Home Automation Team", email = "example@example.com"}
]
keywords = ["home automation", "iot", "camera", "security", "network scanning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Home Automation",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

dependencies = [
    "click>=8.0.0",
    "requests>=2.28.0",
    "python-nmap>=0.7.1",
    "sqlalchemy>=1.4.0",
    "pyyaml>=6.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "alembic>=1.12.0",
    "pydantic>=2.0.0",
    "schedule>=1.2.0",
    "pillow>=10.0.0",
    "opencv-python-headless>=4.8.0",
    "paramiko>=3.3.0",
    "google-auth>=2.23.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.1.0",
    "google-api-python-client>=2.100.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.0.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
homeauto-scan = "homeauto.cli.scan:main"
homeauto-config = "homeauto.cli.config:main"
homeauto-security = "homeauto.cli.security:main"
homeauto = "homeauto.cli.main:main"

[project.urls]
"Homepage" = "https://github.com/marixon/home-automation1"
"Bug Tracker" = "https://github.com/marixon/home-automation1/issues"
"Documentation" = "https://github.com/marixon/home-automation1/blob/master/README.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["homeauto*"]
exclude = ["tests*", "examples*", "docs*"]

[tool.setuptools.package-data]
homeauto = [
    "web/static/*.html",
    "web/static/*.css",
    "web/static/*.js",
    "config/*.yaml",
    "config/*.yml",
]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[project.entry-points."homeauto.plugins"]
camera = "homeauto.devices.camera:CameraDevice"
gate = "homeauto.devices.gate:HikGateDevice"
tuya = "homeauto.devices.tuya:TuyaDevice"
